ui: add placeholder for sections

--- a/ui/src/app/resume/form/root/root.form.template.html
+++ b/ui/src/app/resume/form/root/root.form.template.html
@@ -32,6 +32,7 @@
         </span>
       </mat-panel-description>
     </mat-expansion-panel-header>
+    <div *cdkDragPlaceholder class="h-12 w-full bg-surface-dimmer"></div>
     <section-form [idx]="$index" [form]="$any(section)" />
   </mat-expansion-panel>
   }
