chore: test nested drop list works

--- a/ui/src/app/test/test.template.html
+++ b/ui/src/app/test/test.template.html
@@ -11,7 +11,7 @@
     cdkDropList
     [cdkDropListData]="item"
     (cdkDropListDropped)="cdrop($event)"
-    (cdkDropListEntered)="a()"
+    (cdkDropListEntered)="a($event, $index)"
   >
     <mat-expansion-panel-header class="relative">
       <mat-panel-title>Haha</mat-panel-title>
