chore: bound rects cache

--- a/ui/src/app/resume/form/root/root.form.template.html
+++ b/ui/src/app/resume/form/root/root.form.template.html
@@ -40,6 +40,7 @@
       [idx]="$index"
       [form]="$any(section)"
       [dragMovedCallback]="childDragMoved.bind(this)"
+      [dragStartCallback]="childDragStart.bind(this)"
     />
   </mat-expansion-panel>
   }
