fix: tidy up prop drilling drag events

--- a/ui/src/app/resume/form/root/root.form.template.html
+++ b/ui/src/app/resume/form/root/root.form.template.html
@@ -39,8 +39,8 @@
     <section-form
       [idx]="$index"
       [form]="$any(section)"
-      [dragMovedCallback]="childDragMoved.bind(this)"
-      [dragStartCallback]="childDragStart.bind(this)"
+      (dragMoveOutput)="childDragMoved($event)"
+      (dragStartOutput)="childDragStart($event)"
     />
   </mat-expansion-panel>
   }
