--- a/ui/src/app/resume/form/section/section.form.template.html
+++ b/ui/src/app/resume/form/section/section.form.template.html
@@ -27,8 +27,8 @@
     <mat-expansion-panel
       cdkDrag
       #sectionItems
-      (cdkDragMoved)="dragMovedCallback()($event)"
-      (cdkDragStarted)="dragStartCallback()($event)"
+      (cdkDragMoved)="dragMoveOutput.emit($event)"
+      (cdkDragStarted)="dragStartOutput.emit($event)"
     >
       <mat-expansion-panel-header class="flex group">
         <drag-handle cdkDragHandle class="absolute inset-y-0 left-0 flex items-center px-1" />
