--- a/ui/src/app/resume/form/date/date.form.template.html
+++ b/ui/src/app/resume/form/date/date.form.template.html
@@ -28,6 +28,9 @@
     <mat-hint>{{ format?.value }}</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker [touchUi]="isMobile()" #picker></mat-datepicker>
+    @if (start?.invalid) {
+    <mat-error> {{ getStartErrorMessage(start?.errors) }}</mat-error>
+    }
   </mat-form-field>
   } @else {
   <div class="flex flex-col md:flex-row items-center gap-2">
@@ -37,8 +40,8 @@
       <input matInput formControlName="start" [matDatepicker]="pickerStart" />
       <mat-datepicker-toggle matIconSuffix [for]="pickerStart"></mat-datepicker-toggle>
       <mat-datepicker [touchUi]="isMobile()" #pickerStart></mat-datepicker>
-      @if (start?.hasError('required')) {
-      <mat-error> Start date is required. </mat-error>
+      @if (start?.invalid) {
+      <mat-error> {{ getStartErrorMessage(start?.errors) }} </mat-error>
       }
     </mat-form-field>
 
