--- a/ui/src/app/resume/form/date/date.form.template.html
+++ b/ui/src/app/resume/form/date/date.form.template.html
@@ -1,7 +1,14 @@
 <form [formGroup]="form()" class="flex flex-col gap-2">
   <mat-expansion-panel class="w-full">
-    <mat-expansion-panel-header>
-      <mat-panel-title> Expand Date Settings </mat-panel-title>
+    <mat-expansion-panel-header class="relative flex group">
+      <mat-panel-title> Date Settings </mat-panel-title>
+      <mat-panel-description class="!flex-none">
+        <span [class.flex]="isTablet()" [class.hidden]="!isTablet()" class="group-hover:flex">
+          <button matIconButton (click)="delete.emit($event)">
+            <mat-icon fontSet="material-symbols-outlined" class="text-error">delete</mat-icon>
+          </button>
+        </span>
+      </mat-panel-description>
     </mat-expansion-panel-header>
     <div class="relative">
       <mat-form-field class="w-full">
