--- a/ui/src/app/resume/form/section/section.form.template.html
+++ b/ui/src/app/resume/form/section/section.form.template.html
@@ -40,9 +40,7 @@
         </mat-panel-title>
         <mat-panel-description class="!flex-none">
           <span [class.flex]="isTablet()" [class.hidden]="!isTablet()" class="group-hover:flex">
-            <button matIconButton (click)="onDelete($event, $index)">
-              <mat-icon fontSet="material-symbols-outlined" class="text-error">delete</mat-icon>
-            </button>
+            <delete-button tooltip="Delete Section Item" (delete)="onDelete($event, $index)" />
           </span>
         </mat-panel-description>
       </mat-expansion-panel-header>
