chore: init pdf preview

--- a/ui/src/app/resume/edit/edit.resume.template.html
+++ b/ui/src/app/resume/edit/edit.resume.template.html
@@ -12,7 +12,5 @@
   </resizable-panel>
 
   <!-- PDF PREVIEW -->
-  <div class="hidden md:flex w-full min-h-0 preview-container overflow-y-auto p-2">
-    <div class="w-full aspect-[1/1.4142] bg-white h-fit border border-slate-300"></div>
-  </div>
+  <preview-resume />
 </div>
